HW3/with_gpu.err
module: loading 'cuda/12.2.2'
module: cuda: To use: module load gcc/10.2
module: loading 'gcc/10.2'
module: gcc: "Note: loading the gcc module overrides the gcc version on the system.  If you want to revert to the version of gcc provided by the OS, unload the gcc module."
matrixVectorMult.cu(157): error: expected an expression
      if (threadIdx.x == 0) && ((blockIdx.x % numBlocksPerRow) == 0) {
                            ^

matrixVectorMult.cu(162): warning #12-D: parsing restarts here after previous syntax error
    }
    ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

matrixVectorMult.cu(162): error: expected a ";"
    }
    ^

2 errors detected in the compilation of "matrixVectorMult.cu".
